Merge para la versión 1.42